Agregue una propiedad 100% necesaria en la navbar que lo elimine por accidente y ya solucione un bug y agregue hover al area de perfil

--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -6,6 +6,8 @@
   /* background-color: #01020288; */
   /* Sombreado entre contenedores */
   background: linear-gradient(0deg, rgb(0, 0, 0) 0%, rgba(0,0,0,0) 10%, rgba(0, 0, 0, 0) 100%);
+  position: relative;
+  z-index: 5;  /* Mandamos encima de todo la Navbar horizontal en la capa 2 */
 }
 
 .NavBar{
