--- a/src/css/Perfil.css
+++ b/src/css/Perfil.css
@@ -35,16 +35,30 @@
 }
 
 .nombre {
-    color: rgb(255, 255, 255);
+    color: rgb(255, 153, 0);
     font-family: Verdana;
     font-size: 70px;
     margin-right: 15px;
 }
 
+.nombre:hover{
+    color: rgb(174, 0, 255);
+    transition: .5s;
+}
+
 .nombre2{
     font-family: Verdana;
     font-size: 70px;
-    color: chocolate;
+    color: rgb(15, 227, 255);
+}
+
+.nombre2:hover{
+    color: rgb(217, 255, 0);
+    transition: .5s;
+}
+
+.nombre2::before{
+    transition: 1s;
 }
 
 @media screen and (max-width:412px){
