--- a/src/css/aboutme.css
+++ b/src/css/aboutme.css
@@ -29,6 +29,12 @@
     background: linear-gradient(0deg, rgb(0, 0, 0) 0%, rgba(0, 208, 250, 0) 15%, rgba(64, 192, 218, 0) 85%, rgba(0,0,0,1) 100%);
 }
 
+@media screen and (max-width:360px){
+    .filtro-about{
+        width: 360px;
+    }
+}
+
 /* Añadimos responsive design */
 @media screen and (max-width:450px){
     /* .filtro-about{
