--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -12,13 +12,6 @@
     margin-top: 20%;
 }
 
-@media screen and (max-width:500px){
-    .filtro-projects{
-    /* padding-top: 5%; */
-    /* background-color: blue; */
-    }   
-}
-
 /* Filtro top y bottom de efecto desvanecimiento*/
 .filtro-projects{
     width: 100%;
@@ -36,11 +29,12 @@
 .u {
     color: yellow;
     text-align: center;
+    margin-top: -15px;
 }
 
 .parrafo {
     color: white;
-    padding: 5px 0px 0px 0px;
+    padding: 20px 0px 0px 0px;
     text-align: center;
 }
 .proyectos {
@@ -48,7 +42,6 @@
     height: 100%;
     display: flex;
     align-items: center;
-    color: white;
     justify-content: center;
 }
 
@@ -57,42 +50,19 @@
     grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
     width: 90%;
     margin: 0 auto;
-    padding:30px;
+    padding:30px 0px 90px;
 }
 
-/* .proyecto {
-    height: 250px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 17px;
-    margin-right: 17px;
-    margin-left: 17px;
-    margin-bottom: 17px;
-    background-color: rgb(6, 11, 87);
-} */
+/* Responsive iPad Mini */
+@media screen and (max-width:768px){
+    .proyectos-grid{
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 
+    }
+}
+/* Responsive iPhone 12 Pro,etc... */
 @media screen and (max-width:420px){
-    .proyectos{
-        width: 98%;
-        margin-left: 1px;
-        margin-right: 1px;
-        /* background-color: peru; */
+    .proyectos-grid{
+        width: 100%;
     }
 }
-
-/* Samsung Galaxy a51-71 responsive */
-/* @media screen and (max-width:420px){
-    .proyecto{
-        width: 100%;
-        margin: 0px 0px 10px 0px;
-    }
-} */
-
-/* Iphone 12 pro responsive */
-/* @media screen and (max-width:390px){
-    .proyecto{
-        width: 95%;
-        margin-left: -15px;
-    }
-} */
