--- a/src/css/skills.css
+++ b/src/css/skills.css
@@ -9,17 +9,19 @@
     margin-top: 20%;
 }
 
-
-
-@media screen and (max-width:500px){
+/* Responsive design a50  */
+@media screen and (max-width:413px){
     .main-skill{
-        margin-top: 40%;
+        margin-top: 20%;
+        /* padding-bottom: 0%; */
     }
 }
 
-@media screen and (max-width:420px){
+/* samsung s22 fake responsive design */
+@media screen and (max-width:410px){
     .main-skill{
-        margin-top: 20%;
+        margin-top: 40%;
+        /* padding-bottom: 50%; */
     }
 }
 
@@ -29,18 +31,25 @@
     background: linear-gradient(0deg, rgb(0, 0, 0) 0%, rgba(0, 208, 250, 0) 15%, rgba(0, 213, 255, 0) 85%, rgba(0,0,0,1) 100%);
 }
 
+@media screen and (max-width:420px){
+    .filtro-skills{
+        height: auto;
+        background: linear-gradient(0deg, rgb(0, 0, 0) 0%, rgba(0, 208, 250, 0) 15%, rgba(0, 213, 255, 0) 85%, rgba(0,0,0,1) 100%);
+    }
+}
+
+
+
 .title-skill{
     text-align: center;
     color: white;
     font-weight: 900;
     padding-top: 5%;
+    /* background-color: yellow; */
 }
 
 .Skills-body{
-    /* ancho y altura automatica */
     width: 100%;
-    /* centrando el contenido */
-    margin: 5% 0% 15% 0%;
     display: flex;
     align-items: center;
 
