--- a/src/css/aboutme.css
+++ b/src/css/aboutme.css
@@ -86,7 +86,14 @@
     height: auto;
     margin: 60px 0px 60px 0px;
     box-sizing: border-box;
-    /* background-color: black; */
+    /* background-color: blue; */
+}
+
+.foto2 {
+    width: 70%;
+    height: 70%;
+    padding: 15%;
+    border-radius: 50%;
 }
 
 .about3 {
@@ -136,12 +143,6 @@
     }
 }
 
-.foto2 {
-    width: 90%;
-    height: 90%;
-    border-radius: 100%;
-}
-
 /* Nombre */
 .about-nombre{
     font-size: 20px;
@@ -183,33 +184,85 @@ li{
 
 }
 
-.boton1 {
-    
-    width: 130px;
-    background-color: orange;
-    border: 1px solid orange; /* Green */
-    border-radius: 50px;
-    color: white;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    font-weight: bold;
-    margin-right: 5%;
-    line-height: 35px;
-}
-
-.boton2 {
+/* From uiverse.io by @G4b413l */
+.buttonDownload {
     width: 145px;
-    background-color: black;
-    border: 1px solid white; /* Green */
     border-radius: 50px;
-    color: white;
-    text-align: center;
+    border: 1px solid white; /* Green */
     text-decoration: none;
     display: inline-block;
-    font-size: 16px;
+    position: relative;
+    padding: 10px 25px;
+    background-color: orange;
+    color: white;
+    font-family: sans-serif;
+    text-decoration: none;
     font-weight: bold;
-    line-height: 35px;
-}
-
+    font-size: 1em;
+    text-align: center;
+    text-indent: 15px;
+    border: none;
+   }
+   
+   .buttonDownload:hover {
+    background-color: rgb(218, 149, 21);
+    color: white;
+   }
+   
+   .buttonDownload:before, .buttonDownload:after {
+    content: ' ';
+    display: block;
+    position: absolute;
+    left: 15px;
+    top: 52%;
+   }
+   
+   .buttonDownload:before {
+    width: 10px;
+    height: 2px;
+    border-style: solid;
+    border-width: 0 2px 2px;
+   }
+   
+   .buttonDownload:after {
+    width: 0;
+    height: 0;
+    margin-left: 3px;
+    margin-top: -7px;
+    border-style: solid;
+    border-width: 4px 4px 0 4px;
+    border-color: transparent;
+    border-top-color: inherit;
+    animation: downloadArrow 1s linear infinite;
+    animation-play-state: paused;
+   }
+   
+   .buttonDownload:hover:before {
+    border-color: #cdefbd;
+   }
+   
+   .buttonDownload:hover:after {
+    border-top-color: #cdefbd;
+    animation-play-state: running;
+   }
+   
+   @keyframes downloadArrow {
+    0% {
+     margin-top: -7px;
+     opacity: 1;
+    }
+   
+    0.001% {
+     margin-top: -15px;
+     opacity: 0.4;
+    }
+   
+    50% {
+     opacity: 1;
+    }
+   
+    100% {
+     margin-top: 0;
+     opacity: 0.4;
+    }
+   }
