--- a/src/css/Perfil.css
+++ b/src/css/Perfil.css
@@ -39,22 +39,25 @@
     font-family: Verdana;
     font-size: 70px;
     margin-right: 15px;
+    transition: 0.5s;
 }
 
 .nombre:hover{
     color: rgb(174, 0, 255);
-    transition: .5s;
+    transform: scale(1.1);
 }
 
 .nombre2{
     font-family: Verdana;
     font-size: 70px;
     color: rgb(15, 227, 255);
+    transition: .5s;
 }
 
 .nombre2:hover{
     color: rgb(217, 255, 0);
-    transition: .5s;
+    transform: scale(1.1);
+
 }
 
 .nombre2::before{
