--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -1,167 +1,161 @@
-.Contact-base{
-    width: 100%;
-    height: 110vh;
-    background-color: rgb(0, 4, 18);
-    /* padding-top: 1%; */
+@import url('https://fonts.googleapis.com/css2?family=Edu+VIC+WA+NT+Beginner&display=swap');
 
-    
-    background: linear-gradient(rgba(5, 7, 12, 0.623) , rgba(5, 7, 12, 0.616)),
-    url(../images/fondo6.jpg) no-repeat center center;
-    background-size: cover; /*cover; redimensiona la imagen para aseugrar que ocupa el máximo de pantalla posible. */
-    margin-top: 20%;
-}
-
-/* Ajustamos la altura y el margin-top en moviles */
-@media screen and (max-width:600px){
-    .Contact-base{
-        height: auto;
-        margin-bottom: -5%;
-    }
-}
-
-/* Filtro top y bottom de efecto desvanecimiento*/
-.filtro-contact{
-    height: 110vh;
-    background: linear-gradient(0deg, rgb(0, 0, 0) 0%, rgba(0, 208, 250, 0) 15%, rgba(64, 192, 218, 0) 85%, rgba(0,0,0,1) 100%);
-}
-
-.container-form{
-    width: 30%;
+.contact{
+    width: auto;
     height: 100vh;
-    margin-left: 30%;
-    padding-top: 1px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-@media screen and (max-width:600px){
-    .container-form{
+@media(max-width: 420px) {
+    .contact{
+        padding: 0 1em;
+    }
+}
+
+.content {
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
+}
+
+@media(max-width: 420px) {
+    .content{
         width: 100%;
-        /* height: 100vh; */
-        margin-left: 0%;
-        padding-top: 30%;
     }
 }
 
-.formulario{
-	width: 450px; 
-    height: auto;
-    margin: 5% auto;
-    margin-top: 25%;
-	padding-top: 30px;
-	padding-bottom: 20px;  
-    padding-left: 30px; 
-    color: white;
-    background-color: #000000b4;
-    -webkit-box-shadow: 0px 0px 21px 22px #000000b4; 
-    box-shadow: 0px 0px 21px 22px #000000b4;
-    border-radius: 30px;
-}
-/* Añadimos responsive al formulario */
-@media screen and (max-width:600px){
-    .formulario{
-        width:360px;
-	    padding-left: 15px;
-        padding-right: 10px;
+@media(min-width: 1600px) {
+    .content{
+        width: 60%;
     }
 }
 
-.form-titulo{
+ul {
+    list-style: none;
+    padding: 0;
+}
+
+.logo {
     text-align: center;
-    margin-left: -30px;
-}
-
-input{
-	background-color: #0c0c0cbe; 
+    font-size: 3em;
     color: white;
-	width: 408px; 
-	height: 40px; 
-	border-radius: 5px;  
-	/* border-style: solid;  */
-	border-width: 1px; 
-	border-color: #0c0c0cbe; 
-	margin-top: 10px;  
-	padding-left: 10px;
-    margin-bottom: 20px;
+    margin-bottom: 5%;
 }
 
-/* Añadimos responsive a los inputs del formulario y el textarea */
+.contact-wrapper > * {
+    padding: 0.5em;
+}
 
-@media screen and (max-width:600px){
-    input, .textarea{
-        width: 335px;
+.contact-form {
+    background: #141111;
+}
+
+@media(max-width: 420px) {
+    .contact-form{
+    border-radius: 10px;
+    margin: 5% 0% 7% 0%;
     }
 }
 
-textarea{
-    background-color: #0c0c0cbe;
+.contact-form label{
     color: white;
-      width: 405px;
-      height: 80px; 
-      border-radius: 5px;  
-      /* border-style: solid;  */
-      border-width: 1px; 
-      border-color: #0c0c0c; 
-      margin-top: 10px;  
-      padding-left: 10px;
-      margin-bottom: 20px; 
-      padding-top: 15px; 
-  }
-
-label{
-    display: block; 
-    float: center; 	
-  }
-
-.form-button{
-	width: 420px;
-	height: 45px; 
-	padding-left: 5px;
-	padding-right: 5px; 	
-	margin-bottom: 20px; 
-	margin-top: 10px; 	
-    background-color: rgba(255, 166, 0, 0.788);
-    /* border: 1px solid orange; */
-	/* border-style: solid; */
-	border-radius: 10px;
-    border: 1px solid rgba(255, 166, 0, 0.788);
-    /* border-color: #97d848; */
-    cursor: pointer;
-    line-height: 0px;
 }
 
-/* AGregando responsive design al boton */
-@media screen and (max-width:600px){
-    .form-button{
-        width: 346px;
+.contact-form h3{
+    color: white;
+}
+
+.contact-form form {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.contact-form form label {
+    display: block;
+}
+
+.contact-form form p {
+    margin: 0;
+    padding: 1em;
+}
+
+.contact-form form .block {
+    grid-column: 1 / 3;
+}
+
+.contact-form button{
+    border-radius: 15px;
+}
+
+.contact-form form button,
+.contact-form form input,
+.contact-form form textarea {
+    width: 100%;
+    padding: .7em;
+    border: none;
+    background: none;
+    outline: 0;
+    color: #fff;
+    border-bottom: 1px solid #ff080883;
+}
+
+.contact-form form button {
+    background: #B70E21;
+    border: 0;
+    text-transform: uppercase;
+    padding: 1em;
+}
+
+.contact-form form button:hover,
+.contact-form form button:focus {
+    background: #d63031;
+    color: #fff;
+    transition: background-color 1s ease-out;
+    outline: 0;
+}
+
+/* CONTACT INFO */
+.contact-info {
+    background: #0e0d0d;
+}
+
+@media(max-width: 420px) {
+    .contact-info{
+        background: #000000;
     }
 }
 
-.button-p{
-    font-size: 16px;
-    font-weight: bold;
+.contact-info h4, .contact-info ul, .contact-info p {
+    text-align: center;
+    margin: 0 0 1rem 0;
+    color: white;
 }
 
-.aviso{
-	font-size: 13px;  
-	color: #ffffff;  
+.contact-info li {
+    color: white;
 }
 
-.form-h3{
-	font-size: 16px; 
-	padding-bottom: 30px;
-	color: #ffffff;   
+/* LARGE SIZE */
+@media(min-width: 700px) {
+    .contact {
+        padding: 0 4em;
+    }
+    .contact-wrapper {
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+    }
+    .contact-wrapper > * {
+        padding: 2em;
+    }
+    .contact-info h4,
+    .contact-info ul,
+    .contact-info p {
+        text-align: left;
+    }
 }
 
-/* ::-webkit-input-placeholder {
-    color: #ffffff;
-   }
-    */
-   
-.formulario input:focus{
-    outline:0;
-    border: 1px solid #97d848;
-}
-
-.formulario textarea:focus{
-    outline:0;
-    border: 1px solid #97d848;
+.frase{
+    font-family: 'Edu VIC WA NT Beginner', cursive;
 }
